update PlatCOntroller comment && re generate openapi
