# api/src/Controller/PlatController.php
@@ -103,15 +103,28 @@ final class PlatController extends DefaultController{
      *  path="/plat",
      *  tags={"Plat"},
      *  @OA\RequestBody(
-     *      @OA\JsonContent(
-     *          required={"name"},
-     *          @OA\Property(
-     *              property="name",
-     *              type="string",
-     *              example="nom du plat"
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *          @OA\Schema(
+     *              @OA\Property(
+     *                  property="name",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="prix",
+     *                  type="float"
+     *              ),
+     *              @OA\Property(
+     *                  property="image",
+     *                  type="string"
+     *              ),
+     *              @OA\Property(
+     *                  property="description",
+     *                  type="string"
+     *              ),
+     *              example={"name": "Nom du plat", "prix": "Prix du plat", "image": "Image u plat", "description": "Descripion du plat"}
      *          )
      *      ),
-     *      required=true
      *  ),
      *  @OA\Response(
      *      response=201,
